hphp/hack/test/sound_dynamic/typing/bidirectional.bad.php.exp
File "bidirectional.bad.php", line 8, characters 17-18:
Function  `;anonymous` is not dynamically callable. (Typing[4110])
  File "bidirectional.bad.php", line 8, characters 17-18:
  Invalid argument
  File "bidirectional.bad.php", line 14, characters 22-28:
  Expected `shape()`
  File "bidirectional.bad.php", line 6, characters 19-20:
  But got `dynamic` because method must be callable in a dynamic context
